k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cliente-api-kube
  name: cliente-api-kube-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cliente-api-kube
  template:
    metadata:
      labels:
        app: cliente-api-kube
    spec:
      containers:
      - name: cliente-api-kube
        image: image-registry.openshift-image-registry.svc:5000/pipelines-tutorial/cliente-api-kube
        ports:
          - containerPort: 3000
            protocol: TCP
