k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cliente-api-kube
  name: cliente-api-kube-service
spec:
  type: ClusterIP
  ports:
    - name: 80-tcp
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: cliente-api-kube
