k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: clienteapi
  name: clienteapi
spec:
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: clientepi
    weight: 100
